# AR_avt_3d_2

./: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  App.sln  App.vcxproj  App.vcxproj.filters  CMakeCache.txt  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  help.html  my_file.txt
App/: CMakeLists.txt  my_file.txt
App.dir/Debug/App.tlog/: App.lastbuildstate  CL.read.1.tlog  CL.write.1.tlog  cl.command.1.tlog  custombuild.command.1.tlog  custombuild.read.1.tlog  custombuild.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
App/src/: CApplication.cpp  CApplication.hpp  main.cpp
App/src/detector/: CDetector.cpp  CDetector.hpp  CMarkersData.hpp  IDetector.cpp  IDetector.hpp
App/src/loader/: TGALoader.cpp  TGALoader.hpp
App/src/renderer/: CAnimator.cpp  CAnimator.hpp  CCamera.cpp  CCamera.hpp  CFpsCounter.cpp  CFpsCounter.hpp  CLight.hpp  CModel.cpp  CModel.hpp  CRenderer.cpp  CRenderer.hpp  CShader.cpp  CShader.hpp  CUtils.cpp  CUtils.hpp  IRenderer.cpp  IRenderer.hpp  ShaderData.hpp
App/src/video/: CFrame.hpp  CVideoCamera.cpp  CVideoCamera.hpp  CVideoFile.cpp  CVideoFile.hpp  IVideo.cpp  IVideo.hpp
Debug/: SAR.ilk  help.html  my_file.txt
Debug/model/Eeyore - ANIM/: .x.x  Eeyore___.mtl
Debug/model/Kanga - ANIM/: Kanga.x  Kanga__.mtl
Debug/model/Owl - anim/: Owl.mtl  Owl.smd
Debug/model/Piglet - ANIM/: Piglet.mtl  Piglet.smd
Debug/model/Pooh - ANIM/: .x.x  Pooh_2.mtl
Debug/model/Rabbit -anim/: 649out_3.mtl
Debug/model/Tigger - anim/: Tigger.mtl  Tigger.smd
(+3 files in other folders)
